<resources>
    <string name="app_name">SaveUs</string>
    <string name="no_data">--</string>

    <string name="on_boarding_head_1">פרטיות ובטחון</string>
    <string name="on_boarding_body_1">
        מניעת התפשטות הקורונה היא
        <b>המטרה של כולנו\n\n</b>
        עכשיו תוכלו לסייע באופן אקטיבי\n
        <b>ובלי חשש לפגיעה בפרטיותכם</b>
    </string>
    <string name="on_boarding_head_2">פשוט ומהיר</string>
    <string name="on_boarding_head_3">התראות ועדכונים</string>
    <string name="on_boarding_body_3">
        <b>התראה בזמן אמת </b>תתקבל במצב בו דיווחתם על מיקומכם הנוכחי ויש עליו מידע מעודכן כאזור נגוע\n\n<b>התראה מתעדכנת </b>תתקבל כאשר אחד מהמקומות שדיווחתם עליהם, בזמן אמת או בדיעבד, ידווח כאזור נגוע
    </string>

    <string name="prompt_email">דואר אלקטרוני</string>
    <string name="prompt_name">שם</string>
    <string name="prompt_phone_number">מספר טלפון</string>
    <string name="action_sign_in">הרשמה</string>
    <string name="action_sign_in_skip">דלג</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="login_accept_1">אני מאשר את&#160;</string>
    <string name="login_accept_2"><u>התקנון</u></string>
    <string name="login_accept_3">&#160;ואת&#160;</string>
    <string name="login_accept_4"><u>תנאי השימוש</u></string>
    <string name="login_desc">הבריאות והבטחון שלכם נמצאים בעדיפות עליונה,\nאנחנו כאן לעזור לכם לעקוב אחרי הפעילות ולתעד אותה.\n<b>כל המידע אנונימי לחלוטין, אין מה לחשוש.</b></string>
    <string name="nav_bar_main">ראשי</string>
    <string name="nav_bar_my_places">המקומות שלי</string>
    <string name="nav_bar_alerts">התראות</string>

    <string name="circle_1_title">הגעתי</string>
    <string name="circle_1_text">התחל לרשום</string>
    <string name="circle_2_title">עצור</string>

    <string name="my_places_button">המקומות שלי</string>
    <string name="on_map_button">על מפה</string>
    <string name="show_my_places">הצג</string>
    <string name="add_place">הוסף מיקום</string>

    <string name="my_notifications_title">ההתראות שלי</string>
    <string name="num_sick">מספר חולים</string>
    <string name="num_recover">מספר מחלימים</string>
    <string name="num_dead">מספר מתים</string>
    <string name="notification">אין עדכונים עד כה עבורך</string>

    <string name="profile_header">פרטים אישיים</string>
    <string name="profile_name">שם משתמש</string>
    <string name="profile_email">דוא"ל</string>
    <string name="profile_phone_number">מספר טלפון</string>
    <string name="profile_birth_date">תאריך לידה</string>
    <string name="profile_language">שפה</string>
    <string name="profile_allow_notifications">קבלת התראות לנייד</string>
    <string name="profile_how">איך עובדת האפליקציה?</string>
    <string name="profile_terms_of_use">תנאי שימוש</string>
    <string name="profile_problem">דיווח על תקלה</string>
    <string name="profile_share">שתף עם חברים</string>
    <string name="profile_export">ייצוא המקומות בהם ביקרתי</string>

    <string name="save">שמירה</string>
    <string name="edit_place_header">עריכת מיקום</string>
    <string name="edit_place_start">התחלה</string>
    <string name="edit_place_end">סיום</string>
    <string name="edit_place_sum">סך הכל</string>
    <string name="edit_place_delete">מחק דיווח</string>
    <string name="add_place_default">00:00:00</string>
    <string name="add_place_header">הוספת מיקום</string>
    <string name="add_place_date">הוספת תאריך</string>
    <string name="add_place_address">כתובת</string>

    <string name="edit_profile_header">עריכת פרטים אישיים</string>
    <string name="edit_profile_delete">מחק פרטים</string>
    <string name="edit_profile_default">00/00/00</string>
    <string name="edit_profile_language">בחר שפה</string>
    <string name="edit_profile_notifications">קבלת התראות</string>
</resources>