<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".fragments.NotificationsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/add_place"
        android:fontFamily="@font/assistant"
        android:gravity="center"
        android:text="@string/my_notifications_title"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="1.166"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:background="@drawable/my_place_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_light"
                android:text="@string/num_sick"
                android:textAlignment="center"
                android:textColor="@color/date_button"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/num_hospital"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/assistant"
                android:gravity="center"
                android:text="@string/no_data"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:background="@drawable/my_place_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_light"
                android:text="@string/num_recover"
                android:textAlignment="center"
                android:textColor="@color/date_button"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/num_recover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/assistant"
                android:gravity="center"
                android:text="@string/no_data"
                android:textAlignment="center"
                android:textColor="@color/show_my_places"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:background="@drawable/my_place_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_light"
                android:text="@string/num_dead"
                android:textAlignment="center"
                android:textColor="@color/date_button"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/num_dead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/assistant"
                android:gravity="center"
                android:text="@string/no_data"
                android:textAlignment="center"
                android:textColor="@color/add_place"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="2.333"
        android:background="@color/white"
        android:elevation="4dp"
        android:fontFamily="@font/assistant_bold"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:shadowColor="#40000000"
        android:text="@string/notification"
        android:textColor="@color/add_place"
        android:textSize="16sp" />

</LinearLayout>